# cloudflare-executive-report

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  cli-command-flows.md  devbox.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  main.yml  publish.yml
docs/: AI.md  ARCHITECTURE.md  CONTRIBUTING.md  USAGE.md  ci-cd.md  cli-options.md  reliability-metrics.md  reliability_metrics.md  report_period.md  security-analytics-fetch.md  verify-report-vs-cloudflare.md
docs/developers/: AI_DOCS_GUIDELINES.md  README.md  add-new-stream.md  cli-options-reference.md  http-vs-cache-metrics.md  pdf-layout-primitives.md  pdf_layout_primitives.md  report-flow.md  report-period-baseline.md  security-analytics-fetch.md  security-score-policy-observations.md  security_score_policy_observations.md
docs/sample-data/: README.md
docs/sample-data/cache/a1b2c3d4e5f6789012345678abcdef01/: _index.json
docs/sample-data/cache/a1b2c3d4e5f6789012345678abcdef01/2026-03-15/: dns.json
docs/sample-data/cache/a1b2c3d4e5f6789012345678abcdef01/2026-04-01/: cache.json  dns.json  http.json  security.json
docs/sample-data/report/: report-sample.json
src/cloudflare_executive_report/: __init__.py  aggregate.py  cache.py  cf_client.py  cli.py  cli_common.py  config.py  dates.py  dns_fetch.py  executive_summary.py  executive_summary_constants.py  exits.py  formatting.py  logging_config.py  retention.py  sync.py  zone_health.py  zones_api.py
src/cloudflare_executive_report/aggregators/: __init__.py  audit.py  cache.py  certificates.py  dns.py  dns_records.py  email.py  example.py  http.py  http_adaptive.py  registry.py  security.py
src/cloudflare_executive_report/ai/: __init__.py  client.py  formatter.py  prompts.py  summary.py
src/cloudflare_executive_report/cache/: __init__.py  envelope.py  index.py  lock.py  paths.py
src/cloudflare_executive_report/common/: __init__.py  aggregation_helpers.py  boundary.py  colo_locations.py  constants.py  dates.py  formatting.py  logging_config.py  period_resolver.py  report_cache.py  report_period.py  report_snapshot.py  retention.py  safe_types.py
src/cloudflare_executive_report/email/: __init__.py  smtp.py
src/cloudflare_executive_report/executive/: __init__.py  constants.py  nist_catalog.py  phrase_catalog.py  portfolio.py  rules.py  summary.py
src/cloudflare_executive_report/executive/rules/: __init__.py  _context.py  audit.py  certificates.py  dns.py  email.py  http.py  security.py  zone_health.py
src/cloudflare_executive_report/fetchers/: __init__.py  audit.py  cache.py  certificates.py  dns.py  dns_records.py  email.py  example.py  graphql_common.py  http.py  http_adaptive.py  registry.py  security.py  types.py
src/cloudflare_executive_report/pdf/: __init__.py  charts.py  cover.py  document.py  figure_quality.py  layout_spec.py  loader.py  maps.py  orchestrate.py  primitives.py  security_display.py  stream_fragments.py  styles.py  theme.py
src/cloudflare_executive_report/pdf/streams/: __init__.py  appendix.py  cache.py  dns.py  email.py  example.py  executive_summary.py  http.py  portfolio.py  security.py
src/cloudflare_executive_report/report/: __init__.py  baseline_selection.py  command_flow.py  health_refresh.py  period.py  snapshot.py  zone_block.py
src/cloudflare_executive_report/sync/: __init__.py  day_processor.py  options.py  orchestrator.py
src/cloudflare_executive_report/validate/: __init__.py  consts.py  probes.py  runner.py
tests/: test_aggregate.py  test_ai_summary.py  test_baseline_selection.py  test_cache.py  test_cache_lock.py  test_clean_scopes.py  test_cli_argv.py  test_cli_clean.py  test_cli_common.py  test_cli_pdf_stream_order.py  test_command_flow.py  test_config_output_paths.py  test_dates.py  test_day_processor_unit.py  test_email_smtp.py  test_email_stream.py  test_example_stream.py  test_executive_hsts_rules.py  test_executive_portfolio.py  test_executive_rules.py  test_executive_rules_stream_filter.py  test_executive_security_posture_score.py  test_executive_summary.py  test_fetchers_http_adaptive.py  test_fetchers_http_unit.py  test_fetchers_optional_snapshots.py  test_fetchers_security.py  test_fetchers_security_unit.py  test_health_refresh_unit.py  test_integration_smoke.py  test_logging_config.py  test_pdf_charts.py  test_pdf_executive_summary.py  test_pdf_figure_quality.py  test_pdf_loader.py  test_pdf_primitives.py  test_period_resolver.py  test_report_pdf.py  test_report_rotation.py  test_report_snapshot.py  (+9 more)
