[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-executive-report"
version = "0.1.0"
description = "Cloudflare Executive Report - CLI for multi-zone reporting and cache"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudflare>=4.3",
    "httpx>=0.27",
    "pycountry>=23",
    "pyyaml>=6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
cf-report = "cloudflare_executive_report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/cloudflare_executive_report/cli.py" = ["B008"]
