# =========================
# Build system configuration
# =========================
[build-system]
requires = [
    "setuptools>=61",
    "setuptools-scm>=8",
    "wheel",
]
build-backend = "setuptools.build_meta"


# =========================
# Project metadata
# =========================
[project]
name = "cloudflare-executive-report"
dynamic = ["version"]

description = "Cloudflare Executive Report - CLI for multi-zone reporting and cache"
readme = "README.md"

# Require Python 3.11+ (align your CI with this)
requires-python = ">=3.11"

# Runtime dependencies (only what is needed in production)
dependencies = [
    "cartopy>=0.23,<1.0",
    "cloudflare>=4.3,<5.0",
    "httpx>=0.27,<1.0",
    "matplotlib>=3.8,<4.0",
    "pycountry>=23,<25",
    "pyyaml>=6,<7",
    "reportlab>=4.2,<5.0",
    "typer>=0.12,<1.0",
]


# =========================
# Optional dependencies
# =========================
[project.optional-dependencies]

# Development dependencies (used in CI and locally)
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.8",
    "mypy>=1.10",
]

# Optional SVG support
svg = [
    "svglib>=1.5",
]


# =========================
# CLI entry point
# =========================
[project.scripts]

# Exposes `cf-report` command
cf-report = "cloudflare_executive_report.cli:main"


# =========================
# Package discovery
# =========================
[tool.setuptools.packages.find]

# Source directory
where = ["src"]


# =========================
# Versioning (setuptools_scm)
# =========================
[tool.setuptools_scm]

# Fallback version if git metadata is unavailable
fallback_version = "0.1.0"

# Avoid local version suffixes like +dirty
local_scheme = "no-local-version"


# =========================
# Pytest configuration
# =========================
[tool.pytest.ini_options]

# Where tests are located
testpaths = ["tests"]

# Add src to PYTHONPATH
pythonpath = ["src"]


# =========================
# Ruff configuration
# =========================
[tool.ruff]

# Max line length
line-length = 100

# Target Python version
target-version = "py311"

# Source directories
src = ["src", "tests"]


[tool.ruff.lint]

# Enabled rule sets:
# E = pycodestyle errors
# F = pyflakes
# I = import sorting
# UP = pyupgrade
# B = flake8-bugbear
select = ["E", "F", "I", "UP", "B"]


[tool.ruff.lint.per-file-ignores]

# Allow specific exceptions per file
"src/cloudflare_executive_report/cli.py" = ["B008"]
"src/cloudflare_executive_report/executive/phrase_catalog.py" = ["E501"]


# =========================
# Mypy configuration
# =========================
[tool.mypy]

# Python version for type checking
python_version = "3.11"

# Enable stricter checks
strict = true

# Ignore missing type hints from external libs
ignore_missing_imports = true

# Limit checking to your source
files = ["src"]
